Cmap and Quaestio controllers cope with relative URLs as cmap links