@@ -4,6 +4,7 @@ package org.apromore.portal.dialogController;
 import java.io.IOException;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.util.Collections;
 import java.util.List;
@@ -20,6 +21,7 @@ import com.github.sardine.SardineFactory;
 import org.springframework.context.ApplicationContext;
 import org.springframework.context.support.ClassPathXmlApplicationContext;
 
+import org.zkoss.spring.SpringUtil;
 import org.zkoss.zk.ui.Executions;
 import org.zkoss.zul.Applet;
 import org.zkoss.zul.Window;
@@ -132,7 +134,9 @@ public class CmapController extends BaseController {
                 } else {
                     // Parse the cmap link into cmapURL
                     try {
-                        cmapURL = new URL(cmapURLString);
+                        FileStoreService fileStore = (FileStoreService) SpringUtil.getBean("fileStoreClient");
+                        URI baseURI = fileStore.getBaseURI();
+                        cmapURL = baseURI.resolve(cmapURLString).toURL();
                     } catch (MalformedURLException e) {
                         throw new ConfigureException("The model " + modelName +
                             " has a malformed link to its configuration mapping: \"" + cmapURLString + "\"", e);
